--- a/sabah_lichens.Rmd
+++ b/sabah_lichens.Rmd
@@ -1,6 +1,5 @@
 ---
-title: 'How much taxonomic expertise is necessary for prioritising areas of lowland
-  rainforest sites as habitats for lichens in northeast Borneo?'
+title: 'How much taxonomic expertise is necessary for prioritising areas of lowland rainforest sites as habitats for lichens in northeast Borneo?'
 author: 'Rob Mrowicki'
 date: '`r format(Sys.time(), "%d %B %Y")`'
 output:
